--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## Build generated
-build/
+build/FlagPhoneNumber.xcframework
+build/iOS
+build/simulator
+
 DerivedData/
 
 ## Various settings
